# obstacle_detect_remote

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
include/new_obs_filiter/: obstacle_detector.hpp  plane_estimator.hpp  visualization.hpp
launch/: detection.launch.py
obstacle_detect_last/: depth_calculate copy.py  depth_calculate.py  depth_calculate_check.py  importcv2.py  obs_detect.py  obs_draw copy.py  obs_draw.py  realsense_permete.py  text_detect.py
src/: cloud_point_filiter.cpp  main.cpp  obstacle_detector.cpp  plane_estimator.cpp  plane_filiter2.cpp  plane_filter.cpp  visiual.cpp  visualization.cpp
